feat: Add new module for track/store all measurements for user
