# src/controllers/index.ts
@@ -8,3 +8,4 @@ export * as sessionCtrl from './session.controller'
 export * as reviewCtrl from './review.controller'
 export * as savedPostsCtrl from './savedPosts.controller'
 export * as messageCtrl from './message.controller'
+export * as measurementCtrl from './measurement.controller'
