# src/models/index.ts
@@ -10,3 +10,4 @@ export * from './Session'
 export * from './Review'
 export * from './SavedPosts'
 export * from './Message'
+export * from './Measurement'
