# src/validation/index.ts
@@ -10,3 +10,4 @@ export * from './review.validation'
 export * from './savedPosts.validation'
 export * from './react.validation'
 export * from './message.validation'
+export * from './measurement.validation'
